add_executable(ResourceCompiler
        "CfgFile.cpp"
        "CgfUtils.cpp"
        "ChunkFileReader.cpp"
        "CmdLine.cpp"
        "Config.cpp"
        "CryBoneDesc.cpp"
        "CryBoneHierarchyLoader.cpp"
        "CryChunkedFile.cpp"
        "CryVertexBinding.cpp"
        "ExtensionManager.cpp"
        "FileMapping.cpp"
        "FileUtil.cpp"
        "NvTriStrip/NvTriStrip.cpp"
        "NvTriStrip/NvTriStripObjects.cpp"
        "ResourceCompiler.cpp"
        "stdafx.cpp"
        "CfgFile.h"
        "CgfUtils.h"
        "ChunkFileReader.h"
        "CmdLine.h"
        "Config.h"
        "ConvertContext.h"
        "CryBoneDesc.h"
        "CryBoneHierarchyLoader.h"
        "CryChunkedFile.h"
        "CryVertexBinding.h"
        "DebugLog.h"
        "ExtensionManager.h"
        "FileMapping.h"
        "FileUtil.h"
        "ICfgFile.h"
        "IConfig.h"
        "IConvertor.h"
        "IRCLog.h"
        "IResCompiler.h"
        "NvTriStrip/NvTriStrip.h"
        "NvTriStrip/NvTriStripObjects.h"
        "NvTriStrip/RenderPCH.h"
        "NvTriStrip/VertexCache.h"
        "PathUtil.h"
        "PortableString.h"
        "ResComDefs.h"
        "ResourceCompiler.h"
        "stdafx.h"
)

target_include_directories(ResourceCompiler PRIVATE ../CryCommon)
target_compile_definitions(ResourceCompiler PRIVATE _AMD64_ WIN64 WIN32 NDEBUG _CONSOLE)
target_compile_options(ResourceCompiler PRIVATE "-fpermissive")
target_link_libraries(ResourceCompiler -static dbghelp)