add_library(XRenderD3D9 SHARED
        "../Common/3DUtils.cpp"
        "../Common/CRT.cpp"
        "../Common/EvalFuncs_C.cpp"
        "../Common/EvalFuncs_RE.cpp"
        "../Common/LeafBufferCreate.cpp"
        "../Common/LeafBufferRender.cpp"
        "../Common/LeafBufferSerialize.cpp"
        "../Common/LightMaterial.cpp"
        "../Common/Names.cpp"
        "../Common/NvTriStrip/NvTriStrip.cpp"
        "../Common/NvTriStrip/NvTriStripObjects.cpp"
        "../Common/pip_addons.cpp"
        "../Common/RendElements/CRE2DQuad.cpp"
        "../Common/RendElements/CREBeam.cpp"
        "../Common/RendElements/CREClientPoly.cpp"
        "../Common/RendElements/CREClientPoly2D.cpp"
        "../Common/RendElements/CREDummy.cpp"
        "../Common/RendElements/CREFlares.cpp"
        "../Common/RendElements/CREFlashBang.cpp"
        "../Common/RendElements/CREGlare.cpp"
        "../Common/RendElements/CREHDRProcess.cpp"
        "../Common/RendElements/CREOcean.cpp"
        "../Common/RendElements/CREOcLeaf.cpp"
        "../Common/RendElements/CREOclusionQuery.cpp"
        "../Common/RendElements/CREParticleSpray.cpp"
        "../Common/RendElements/CREPolyBlend.cpp"
        "../Common/RendElements/CREPolyMesh.cpp"
        "../Common/RendElements/CREPrefabGeom.cpp"
        "../Common/RendElements/CREScreenProcess.cpp"
        "../Common/RendElements/CREShadowMap.cpp"
        "../Common/RendElements/CRESky.cpp"
        "../Common/RendElements/CRETempMesh.cpp"
        "../Common/RendElements/CRETerrainSector.cpp"
        "../Common/RendElements/CRETriMeshShadow.cpp"
        "../Common/RendElements/FFT_SSE.cpp"
        "../Common/RendElements/RendElement.cpp"
        "../Common/Renderer.cpp"
        "../Common/ResFile.cpp"
        "../Common/Shaders/Parser.cpp"
        "../Common/Shaders/ShaderComponents.cpp"
        "../Common/Shaders/ShaderCore.cpp"
        "../Common/Shaders/ShaderParse.cpp"
        "../Common/Shaders/ShaderScript.cpp"
        "../Common/Shaders/ShaderTemplate.cpp"
        "../Common/Textures/Image/BmpImage.cpp"
        "../Common/Textures/Image/CImage.cpp"
        "../Common/Textures/Image/DDSImage.cpp"
        "../Common/Textures/Image/inv_cmap.cpp"
        "../Common/Textures/Image/jpeg6/jcomapi.cpp"
        "../Common/Textures/Image/jpeg6/jdapimin.cpp"
        "../Common/Textures/Image/jpeg6/jdapistd.cpp"
        "../Common/Textures/Image/jpeg6/jdatasrc.cpp"
        "../Common/Textures/Image/jpeg6/jdcoefct.cpp"
        "../Common/Textures/Image/jpeg6/jdcolor.cpp"
        "../Common/Textures/Image/jpeg6/jddctmgr.cpp"
        "../Common/Textures/Image/jpeg6/jdhuff.cpp"
        "../Common/Textures/Image/jpeg6/jdinput.cpp"
        "../Common/Textures/Image/jpeg6/jdmainct.cpp"
        "../Common/Textures/Image/jpeg6/jdmarker.cpp"
        "../Common/Textures/Image/jpeg6/jdmaster.cpp"
        "../Common/Textures/Image/jpeg6/jdpostct.cpp"
        "../Common/Textures/Image/jpeg6/jdsample.cpp"
        "../Common/Textures/Image/jpeg6/jdtrans.cpp"
        "../Common/Textures/Image/jpeg6/jerror.cpp"
        "../Common/Textures/Image/jpeg6/jfdctflt.cpp"
        "../Common/Textures/Image/jpeg6/jidctflt.cpp"
        "../Common/Textures/Image/jpeg6/jmemmgr.cpp"
        "../Common/Textures/Image/jpeg6/jmemnobs.cpp"
        "../Common/Textures/Image/jpeg6/jutils.cpp"
        "../Common/Textures/Image/JpgImage.cpp"
        "../Common/Textures/Image/PcxImage.cpp"
        "../Common/Textures/Image/Quantize.cpp"
        "../Common/Textures/Image/TgaImage.cpp"
        "../Common/Textures/TexMan.cpp"
        "../Common/Textures/TexManShadows.cpp"
        "../Common/Textures/TexManStreaming.cpp"
        "../RenderPCH.cpp"
        "D3DCGPShader.cpp"
        "D3DCGVProgram.cpp"
        "D3DEnumeration.cpp"
        "D3DFont.cpp"
        "D3DHDRRender.cpp"
        "D3DLog.cpp"
        "D3DRenderRE.cpp"
        "D3DRendPipeline.cpp"
        "D3DREOcean.cpp"
        "D3DScreenRender.cpp"
        "D3DShaders.cpp"
        "D3DShadows.cpp"
        "D3DSprites.cpp"
        "D3DSystem.cpp"
        "D3DTextures.cpp"
        "D3DTexturesStreaming.cpp"
        "D3DVertBuffer.cpp"
        "DriverD3D9.cpp"
        "../Common/3Dc/CompressorLib.h"
        "../Common/3DUtils.h"
        "../Common/CommonRender.h"
        "../Common/EvalFuncs.h"
        "../Common/LZSS.H"
        "../Common/NvTriStrip/NvTriStrip.h"
        "../Common/NvTriStrip/NvTriStripObjects.h"
        "../Common/NvTriStrip/VertexCache.h"
        "../Common/RendElements/CREBeam.h"
        "../Common/RendElements/CREClientPoly.h"
        "../Common/RendElements/CREClientPoly2D.h"
        "../Common/RendElements/CREFlares.h"
        "../Common/RendElements/CREGlare.h"
        "../Common/RendElements/CREHDRProcess.h"
        "../Common/RendElements/CREOcean.h"
        "../Common/RendElements/CREParticleSpray.h"
        "../Common/RendElements/CREPolyBlend.h"
        "../Common/RendElements/CREScreenCommon.h"
        "../Common/RendElements/CRESkyZone.h"
        "../Common/RendElements/CRETempMesh.h"
        "../Common/Renderer.h"
        "../Common/RenderPipeline.h"
        "../Common/Shaders/CShader.h"
        "../Common/Shaders/Parser.h"
        "../Common/Shaders/Shader.h"
        "../Common/Shadow_Renderer.h"
        "../Common/SimpleFrameProfiler.h"
        "../Common/Textures/dxtlib.h"
        "../Common/Textures/Image/BmpImage.h"
        "../Common/Textures/Image/CImage.h"
        "../Common/Textures/Image/dds.h"
        "../Common/Textures/Image/DDSImage.h"
        "../Common/Textures/Image/ijl.h"
        "../Common/Textures/Image/inv_cmap.h"
        "../Common/Textures/Image/jpeg6/jchuff.h"
        "../Common/Textures/Image/jpeg6/jconfig.h"
        "../Common/Textures/Image/jpeg6/jdct.h"
        "../Common/Textures/Image/jpeg6/jdhuff.h"
        "../Common/Textures/Image/jpeg6/jerror.h"
        "../Common/Textures/Image/jpeg6/jinclude.h"
        "../Common/Textures/Image/jpeg6/jmemsys.h"
        "../Common/Textures/Image/jpeg6/jmorecfg.h"
        "../Common/Textures/Image/jpeg6/jpegint.h"
        "../Common/Textures/Image/jpeg6/jpeglib.h"
        "../Common/Textures/Image/jpeg6/jversion.h"
        "../Common/Textures/Image/JpgImage.h"
        "../Common/Textures/Image/PcxImage.h"
        "../Common/Textures/Image/Quantize.h"
        "../Common/Textures/Image/SHendian.h"
        "../Common/Textures/Image/TgaImage.h"
        "../Common/Textures/Image/zlib/zconf.h"
        "../Common/Textures/Image/zlib/zlib.h"
        "../Common/Textures/TexMan.h"
        "../CrtOverrides.h"
        "../RenderPCH.h"
        "CG/cg.h"
        "CG/cgContextManager.h"
        "CG/cgD3D.h"
        "CG/cgD3D9.h"
        "CG/cgGL_profiles.h"
        "CG/cgProgramManager.h"
        "CG/cgTemplates.h"
        "CG/cg_bindlocations.h"
        "CG/cg_datatypes.h"
        "CG/cg_deprecated_api.h"
        "Cg/cg_enums.h"
        "CG/cg_errors.h"
        "CG/cg_profiles.h"
        "D3DCGPShader.h"
        "D3DCGVProgram.h"
        "D3DCubeMaps.h"
        "D3DEnumeration.h"
        "D3DSettings.h"
        "D3DTexture.h"
        "DriverD3D9.h"
        "StaticIB.h"
        "StaticVB.h"
)

set(COMPILE_DEFINITIONS _RELEASE NDEBUG WIN64 WIN32 _AMD64_ ENABLE_FRAME_PROFILER COMP_VC DIRECT3D9 OS_WIN32 PROC_INTEL
        _WINDOWS _USRDLL XRENDERD3D9_EXPORTS DO_RENDERLOG DO_RENDERSTATS _RENDERER DONT_USE_CRY_MEMORY_MANAGER)
set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${CMAKE_CURRENT_LIST_DIR}")

find_package(DirectX9 MODULE)

target_include_directories(XRenderD3D9 PRIVATE ../../CryCommon ../ ${DIRECTX_INCLUDE_DIRS})
target_compile_definitions(XRenderD3D9 PRIVATE ${COMPILE_DEFINITIONS})
target_compile_options(XRenderD3D9 PRIVATE "-fpermissive")
target_link_libraries(XRenderD3D9 -static winmm ${DIRECTX_LIBRARIES})