add_library(XRenderNULL STATIC
        "../Common/3DUtils.cpp"
        "../Common/CRT.cpp"
        "../Common/EvalFuncs_C.cpp"
        "../Common/EvalFuncs_RE.cpp"
        "../Common/LeafBufferCreate.cpp"
        "../Common/LeafBufferRender.cpp"
        "../Common/LeafBufferSerialize.cpp"
        "../Common/LightMaterial.cpp"
        "../Common/Names.cpp"
        "../Common/NvTriStrip/NvTriStrip.cpp"
        "../Common/NvTriStrip/NvTriStripObjects.cpp"
        "../Common/pip_addons.cpp"
        "../Common/RendElements/CRE2DQuad.cpp"
        "../Common/RendElements/CREBeam.cpp"
        "../Common/RendElements/CREClientPoly.cpp"
        "../Common/RendElements/CREClientPoly2D.cpp"
        "../Common/RendElements/CREDummy.cpp"
        "../Common/RendElements/CREFlares.cpp"
        "../Common/RendElements/CREGlare.cpp"
        "../Common/RendElements/CREHDRProcess.cpp"
        "../Common/RendElements/CREOcean.cpp"
        "../Common/RendElements/CREOcLeaf.cpp"
        "../Common/RendElements/CREOclusionQuery.cpp"
        "../Common/RendElements/CREParticleSpray.cpp"
        "../Common/RendElements/CREPolyBlend.cpp"
        "../Common/RendElements/CREPolyMesh.cpp"
        "../Common/RendElements/CREPrefabGeom.cpp"
        "../Common/RendElements/CREScreenProcess.cpp"
        "../Common/RendElements/CREShadowMap.cpp"
        "../Common/RendElements/CRESky.cpp"
        "../Common/RendElements/CRETempMesh.cpp"
        "../Common/RendElements/CRETerrainSector.cpp"
        "../Common/RendElements/CRETriMeshAdditionalShadow.cpp"
        "../Common/RendElements/CRETriMeshShadow.cpp"
        "../Common/RendElements/FFT_SSE.cpp"
        "../Common/RendElements/RendElement.cpp"
        "../Common/Renderer.cpp"
        "../Common/ResFile.cpp"
        "../Common/Shaders/Parser.cpp"
        "../Common/Shaders/ShaderComponents.cpp"
        "../Common/Shaders/ShaderCore.cpp"
        "../Common/Shaders/ShaderParse.cpp"
        "../Common/Shaders/ShaderScript.cpp"
        "../Common/Shaders/ShaderTemplate.cpp"
        "../Common/Textures/Image/BmpImage.cpp"
        "../Common/Textures/Image/CImage.cpp"
        "../Common/Textures/Image/DDSImage.cpp"
        "../Common/Textures/Image/inv_cmap.cpp"
        "../Common/Textures/Image/JpgImage.cpp"
        "../Common/Textures/Image/PcxImage.cpp"
        "../Common/Textures/Image/Quantize.cpp"
        "../Common/Textures/Image/TgaImage.cpp"
        "../Common/Textures/TexMan.cpp"
        "../Common/Textures/TexManShadows.cpp"
        "../Common/Textures/TexManStreaming.cpp"
        "../RenderPCH.cpp"
        "NULL_Font.cpp"
        "NULL_Renderer.cpp"
        "NULL_RendPipeline.cpp"
        "NULL_REOcean.cpp"
        "NULL_RERender.cpp"
        "NULL_Shaders.cpp"
        "NULL_Shadows.cpp"
        "NULL_System.cpp"
        "NULL_Textures.cpp"
        "NULL_TexturesStreaming.cpp"
        "NULL_VertBuffer.cpp"
        "../Common/3DUtils.h"
        "../Common/CommonRender.h"
        "../Common/Defs.h"
        "../Common/EvalFuncs.h"
        "../Common/LZSS.H"
        "../Common/NvTriStrip/NvTriStrip.h"
        "../Common/NvTriStrip/NvTriStripObjects.h"
        "../Common/NvTriStrip/VertexCache.h"
        "../Common/RendElements/CREBeam.h"
        "../Common/RendElements/CREClientPoly.h"
        "../Common/RendElements/CREClientPoly2D.h"
        "../Common/RendElements/CREFlares.h"
        "../Common/RendElements/CREGlare.h"
        "../Common/RendElements/CREHDRProcess.h"
        "../Common/RendElements/CREHeat.h"
        "../Common/RendElements/CREOcean.h"
        "../Common/RendElements/CREParticleSpray.h"
        "../Common/RendElements/CREPolyBlend.h"
        "../Common/RendElements/CREPrefabGeom.h"
        "../Common/RendElements/CRESkyZone.h"
        "../Common/RendElements/CRETempMesh.h"
        "../Common/Renderer.h"
        "../Common/RenderPipeline.h"
        "../Common/ResFile.h"
        "../Common/Shaders/CShader.h"
        "../Common/Shaders/Parser.h"
        "../Common/Shaders/Shader.h"
        "../Common/Shadow_Renderer.h"
        "../Common/SimpleFrameProfiler.h"
        "../Common/Textures/dxtlib.h"
        "../Common/Textures/Image/BmpImage.h"
        "../Common/Textures/Image/CImage.h"
        "../Common/Textures/Image/dds.h"
        "../Common/Textures/Image/DDSImage.h"
        "../Common/Textures/Image/GifImage.h"
        "../Common/Textures/Image/inv_cmap.h"
        "../Common/Textures/Image/JpgImage.h"
        "../Common/Textures/Image/PcxImage.h"
        "../Common/Textures/Image/Quantize.h"
        "../Common/Textures/Image/SHendian.h"
        "../Common/Textures/Image/TgaImage.h"
        "../Common/Textures/TexMan.h"
        "../CrtOverrides.h"
        "../RenderPCH.h"
        "NULL_Renderer.h"
)

target_include_directories(XRenderNULL PRIVATE ../)
target_compile_definitions(XRenderNULL PRIVATE NULL_RENDERER)
target_link_libraries(XRenderNULL CryCommon)